--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <main>
-    <div class="sedan">
+    <section class="sedan naranja">
       <img src="./images/icon-sedans.svg" alt="Logo Sedans" class="logos">
       <p class="titulos">
         Sedans
@@ -28,12 +28,12 @@
         Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
         or on your next road trip.
       </p>
-      <button type="button">
+      <button class="naranja" type="button">
         Learn More
       </button>
-    </div>
+    </section>
 
-    <div class="suv">
+    <section class="suv">
       <img src="./images/icon-suvs.svg" alt="Logo SUVs" class="logos">
       <p class="titulos">
         SUVs
@@ -42,12 +42,12 @@
         Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
         and off-road adventures.
       </p>
-      <button type="button">
+      <button class="verde-medio" type="button">
         Learn More
       </button>
-    </div>
+    </section>
 
-    <div class="luxury">
+    <section class="luxury">
       <img src="./images/icon-luxury.svg" alt="Logo Luxury" class="logos">
       <p class="titulos">
         Luxury
@@ -56,19 +56,19 @@
         Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
         rental and arrive in style.
       </p>
-      <button type="button">
+      <button class="verde-oscuro" type="button">
         Learn More
       </button>
-    </div>
+    </section>
   </main>
 
 
 
-  <!-- <footer class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend
       Mentor</a>.
     Coded by <a href="https://github.com/Mario-Etchegoyen?tab=repositories">Aprendiz Eterno</a>.
-  </footer> -->
+  </footer>
 </body>
 
 </html>
